--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,10 +54,10 @@
         app:layout_constraintTop_toBottomOf="@+id/mediumRec_banner" />
 
     <Button
-        android:id="@+id/interstital_ad_btn"
+        android:id="@+id/recycler_view_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Show Interstital"
+        android:text="Recycler View"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
